fixed redundant tset-pages rendering for first page

--- a/contribution_form/cf_init.html
+++ b/contribution_form/cf_init.html
@@ -20,7 +20,7 @@
     </p>
 
 
-    <form target="_self" id="whole_form" action="cf_init.py" method="post" autocomplete="off">
+    <form target="_self" id="whole_form" action="cf_init.py" method="post" autocomplete="on">
 
       
 
