minor changes to templates

--- a/contribution_form/cf_init.html
+++ b/contribution_form/cf_init.html
@@ -31,9 +31,11 @@
         <div class="dataset-name">
           <label>
             <span>* Dataset Name</span>
-            <p class="description"> One-word name for the dataset. Should only contain alphanumeric
-              characters.
-              For example, "mobilitywireless5G". More examples can be found <a href="#">here.</a></p>
+            <p class="description"> 
+              One-word name for the dataset. Should only contain alphanumeric characters, preferably
+              all lowercase. For example, "mobilitywireless5g". More examples can be found 
+              <a href="#">here.</a>
+            </p>
             
               <div class="input-error-container">
                 <input type="text" id="dset_name" name="dset_name" placeholder="Dataset Name">
@@ -48,7 +50,7 @@
           <label>
             <span>* Author 1 Email</span>
             <p class="description"> 
-              Token for accessing the form for later use will be sent to this email.
+              The URL for accessing the contribution form for later use will be sent to this email.
             </p>
             <div class="input-error-container">
               <input type="text" id="dset_author1_email" name="dset_author1_email" placeholder="Email" />
