on blur validation completed

--- a/contribution_form/cf_init.html
+++ b/contribution_form/cf_init.html
@@ -9,7 +9,7 @@
 
 <body>
   <div id="main">
-    <h1> CRAWDAD Dataset Contribution Form Init </h1>
+    <h1> CRAWDAD Dataset Contribution Form: Start Here! </h1>
     <p> Thank you for offering to contribute your data to
       CRAWDAD! If we will be only mirroring data that is already hosted elsewhere, only
       your permission is needed. However, if your data will be only hosted at
