lots of changes: added save/submit comprehensive validation checks; added the submission actions

--- a/contribution_form/cf_init.html
+++ b/contribution_form/cf_init.html
@@ -30,7 +30,7 @@
 
         <div class="dataset-name">
           <label>
-            <span>* Dataset Name</span>
+            <span>Dataset Name *</span>
             <p class="description"> 
               One-word name for the dataset. Should only contain alphanumeric characters, preferably
               all lowercase. For example, "mobilitywireless5g". More examples can be found 
@@ -48,7 +48,7 @@
 
         <div class="author-details">
           <label>
-            <span>* Author 1 Email</span>
+            <span>Author 1 Email *</span>
             <p class="description"> 
               The URL for accessing the contribution form for later use will be sent to this email.
             </p>
