more commenting/cleaning

--- a/contribution_form/cf_init.html
+++ b/contribution_form/cf_init.html
@@ -20,7 +20,7 @@
       <a href="mailto:crawdad-team@cs.dartmouth.edu">crawdad-team@cs.dartmouth.edu.</a>
     </p>
 
-    <form target="_self" id="whole_form" action="cf_init.py" method="post" autocomplete="on">
+    <form target="_self" id="whole_form" action="progress_start.py" method="post" autocomplete="on">
 
         <h2>Dataset Information</h2>
 
