--- a/contribution_form/cf_init.html
+++ b/contribution_form/cf_init.html
@@ -2,19 +2,19 @@
 <html>
 
 <head>
-  <title> Contribution Form Init</title>
+  <title> CRAWDAD Metadata Form Initialization</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans" type='text/css' />
 </head>
 
 <body>
   <div id="main">
-    <h1> CRAWDAD Dataset Contribution Form: Start Here! </h1>
+    <h1> CRAWDAD Metadata Form: Start Here! </h1>
     <p> 
       Thank you for offering to contribute your data to
       CRAWDAD! If we will be only mirroring data that is already hosted elsewhere, only
       your permission is needed. However, if your data will be only hosted at
-      CRAWDAD, you will need to sign <a href="other/CRAWDAD-Contribution-Agreement.pdf">
+      CRAWDAD, you will need to sign <a href="other/CRAWDAD-Contribution-Agreement.pdf" target="_blank">
       this agreement form.</a> Please ensure that you are able to sign the agreement before proceeding
       with submission of the description of your data. Please mail your signed agreement to
       <a href="mailto:crawdad-team@cs.dartmouth.edu">crawdad-team@cs.dartmouth.edu.</a>
@@ -30,9 +30,10 @@
           <div>
             <span>Dataset Name *</span>
             <p class="description"> 
-              One-word name for the dataset. Should only contain alphanumeric characters, preferably
-              all lowercase. For example, "mobilitywireless5g". More examples can be found 
-              <a href="#">here.</a>
+              One-word name for the dataset. Should only contain alphanumeric characters (preferably
+              all lowercase), hyphens, and/or underscores. For example, "mobility-wireless5g". 
+              More examples can be found 
+              <a href="http://crawdad.org/all-byname.html" target="_blank">here.</a>
             </p>
             
               <div class="input-error-container">
