added 'display likely URL' feature

--- a/contribution_form/cf_init.html
+++ b/contribution_form/cf_init.html
@@ -34,6 +34,8 @@
               all lowercase), hyphens, and/or underscores. For example, "mobility-wireless5g". 
               More examples can be found 
               <a href="http://crawdad.org/all-byname.html" target="_blank">here.</a>
+              Note that this dataset name will be used to generate the URL where your dataset
+              will be hosted.
             </p>
             
               <div class="input-error-container">
